update 01 nova página

--- a/Projetos pessoais/005/lembrar.html
+++ b/Projetos pessoais/005/lembrar.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperar senha</title>
     <link rel="stylesheet" href="estilos/style2.css">
+    <link rel="stylesheet" href="estilos/query2.css">
 </head>
 <body>
     <main>
-        <section>
+        <section id="lembrar"> <!--Caixa que guarda os outros elementos-->
             <div id="img">
                 <!--Teste com imagem-->
             </div>
