--- a/Projetos pessoais/005/lembrar.html
+++ b/Projetos pessoais/005/lembrar.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperar senha</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style2.css">
     <link rel="stylesheet" href="estilos/query2.css">
+    
 </head>
 <body>
     <main>
@@ -21,7 +23,7 @@
 
                 <form action="recupera.php" method="post"> <!--Formulário-->
                     <div class="campo">
-                        <label for="iemail"></label>
+                        <label for="iemail"><span class="material-icons">mail</span></label>
                         <input type="email" name="email" id="iemail" required minlength="5" maxlength="30" autocomplete="email" placeholder="E-mail para recuperação">
                     </div>
                     
