--- a/Projetos pessoais/006/index.html
+++ b/Projetos pessoais/006/index.html
@@ -10,8 +10,13 @@
 <body>
     <main> <!--Área principal do site-->
         <section>
-            oi
+            <div id="visor">
+               
+            </div>
+            <input type="button" value="1" id="bot1">
         </section>
     </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
